fix missing background image on collection page

--- a/styles/main.css
+++ b/styles/main.css
@@ -30,6 +30,41 @@ body {
     cursor: pointer; /*produces the finger-pointer icon when you hover over the logo */
 }
 
+.navbar .links-container {
+    display: table;
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100px;
+    color: white;
+    /* #3 */
+    text-decoration: none;
+}
+
+.links-container .navbar-link {
+    display: table-cell;
+    position: relative;
+    height: 100%;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    /* #4 */
+    vertical-align: middle;
+    color: white;
+    font-size: 0.625rem;
+    letter-spacing: 0.05rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    /* #3 */
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* #5 */
+.links-container .navbar-link:hover {
+    color: rgb(233,50,117);
+}
+
+
 /* Medium and small screens (640px) */
 @media (min-width: 640px) {
     html { font-size: 112%;}
@@ -43,7 +78,7 @@ body {
     .column.half { width: 50%; }
     .column.third { width: 33.3%; }
     .column.fourth { width: 25%; }
-    .column.flow-opposity { float: right; }
+    .column.flow-opposite { float: right; }
 }
 
 /* Large screens (1024px) */
@@ -61,7 +96,15 @@ body {
     max-width: 56rem;
 }
 
+.clearfix::before,
+.clearfix::after {
+    content: " ";
+    display: table;
+}
 
+.clearfix::after {
+    clear: both;
+}
 
 
 
